exercises/manifests/deployment-log-output.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: jjairola/log_output:latest
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
          ports:
            - containerPort: 3000
      volumes:
      # You set volumes at the Pod level, then mount them into containers inside that Pod
        - name: config-volume
          configMap:
            name: log-output-config
